feat:  add 二叉树的迭代

--- a/数据结构与算法/06.树.md
+++ b/数据结构与算法/06.树.md
@@ -250,6 +250,90 @@ function postorder(root) {
 
 
 
+## 二叉树实战
+
+有以下三个命题方向需要大家重点掌握： 
+
+- 迭代法实现二叉树的先、中、后序遍历 
+- 二叉树层序遍历的衍生问题
+- 翻转二叉树 
+
+这三个方向对应的考题都比较经典。与此同时，解决这些问题涉及到的思路和编码细节，也会成为各位日后解决更加复杂的问题的基石
+
+
+
+
+
+### "遍历三兄弟"的迭代实现
+
+通过使用递归，我们可以把原本复杂的东西，拆解成非常简单的、符合人类惯用脑回路的逻辑。
+
+
+
+#### 从先序遍历说起
+
+> 题目：给定一个二叉树，返回它的前序（先序）遍历序列
+
+示例：
+
+输入: [1,null,2,3]
+
+```
+1   
+ \   
+  2   
+ /  
+3 
+```
+
+输出： [1, 2, 3]
+
+进阶: 递归算法很简单，你可以通过迭代算法完成吗？
+
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+const preorderTraversal = function(root) {
+  // 定义结果数组
+  const res = []  
+  // 处理边界条件
+  if(!root) {
+      return res
+  }
+  // 初始化栈结构
+  const stack = [] 
+  // 首先将根结点入栈
+  stack.push(root)  
+  // 若栈不为空，则重复出栈、入栈操作
+  while(stack.length) {
+      // 将栈顶结点记为当前结点
+      const cur = stack.pop() 
+      // 当前结点就是当前子树的根结点，把这个结点放在结果数组的尾部
+      res.push(cur.val)
+      // 若当前子树根结点有右孩子，则将右孩子入栈
+      if(cur.right) {
+          stack.push(cur.right)
+      }
+      // 若当前子树根结点有左孩子，则将左孩子入栈
+      if(cur.left) {
+          stack.push(cur.left)
+      }
+  }
+  // 返回结果数组
+  return res
+};
+```
+
+
+
+
+
+
+
+
+
 
 
 
