--- a/数据结构与算法/07.排序算法.md
+++ b/数据结构与算法/07.排序算法.md
@@ -208,23 +208,129 @@ function insertSort(arr) {
 
 
 
+### 认识 ”分治“思想
+
+快速排序和归并排序都会用到 ”分治“思想，我们先来看看什么是分治思想。
+
+**“分治”，分而治之。其思想就是将一个大问题分解为若干个子问题，针对子问题分别求解后，再将子问题的解整合为大问题的解**。
+
+利用分治思想解决问题，我们一般分三步走：
+
++ 分解子问题
+
++ 求解每个子问题
++ 合并子问题的解，得出大问题的解
+
+下面我们来看一看分治思想是如何帮助我们提升排序算法效率的。
 
 
 
 
 
+## 归并排序
+
+#### 思路分析
+
+归并排序是对分治思想的典型应用，它按照如下的思路对分治思想“三步走”的框架进行了填充：
+
+- **分解子问题**：将需要被排序的数组从中间分割为两半，然后再将分割出来的每个子数组各分割为两半，重复以上操作，直到单个子数组只有一个元素为止。
+- **求解每个子问题**：从粒度最小的子数组开始，两两合并、确保每次合并出来的数组都是有序的。（这里的“子问题”指的就是对每个子数组进行排序）。
+- **合并子问题的解，得出大问题的解**：当数组被合并至原有的规模时，就得到了一个完全排序的数组
 
 
 
+### 真实排序过程演示
+
+下面我们基于归并排序的思路，尝试对以下数组进行排序：
+
+```js
+[8, 7, 6, 5, 4, 3, 2, 1]
+```
+
+**首先重复地分割数组，整个分割过程如下**：
+首次分割，将数组整个对半分：
+
+```js
+[8, 7, 6, 5,| 4, 3, 2, 1]
+```
+
+二次分割，将分割出的左右两个子数组各自对半分：
+
+```js
+[8, 7,| 6, 5,| 4, 3,| 2, 1]
+```
+
+三次分割，四个子数组各自对半分后，每个子数组内都只有一个元素了：
+
+```js
+[8,| 7,| 6,| 5,| 4,| 3,| 2,| 1]
+```
+
+**接下来开始尝试解决每个子问题**。将规模为1的子数组两两合并为规模为2的子数组，合并时确保有序，我们会得到这样的结果：
+
+```js
+[7, 8,| 5, 6,| 3, 4,| 1, 2]
+```
+
+继续将规模为2的按照有序原则合并为规模为4的子数组：
+
+```js
+[5, 6, 7, 8,| 1, 2, 3, 4]  
+```
+
+最后将规模为4的子数组合并为规模为8的数组：
+
+```js
+[1, 2, 3, 4, 5, 6, 7, 8]  
+```
+
+整个数组就完全有序了。
 
 
 
+通过上面的讲解，我们可以总结出归并排序中的两个主要动作：
+
+- 分割
+- 合并
+
+这两个动作是紧密关联的，分割是将大数组反复分解为一个一个的原子项，合并是将原子项反复地组装回原有的大数组。整个过程符合两个特征：
+
+1. 重复（令人想到递归或迭代）
+2. 有去有回（令人想到回溯，进而明确递归这条路）
+
+因此，归并排序在实现上依托的就是递归思想。
+除此之外，这里还涉及到另一个小小的知识点——**两个有序数组的合并**。合并有序数组，涉及到双指针法。
 
 
 
+```js
 
-
-
+function mergeArr(arr1, arr2) {
+    // 初始化两个指针，分别指向arr1 和 arr2
+    let i = 0, j =0
+    // 初始化结果数组
+    const res = []
+    
+    const len1 = arr1.length
+    const len2 = arr2.length
+    // 合并两个子数组
+    while(i < len1 && j < len2) {
+        if (arr1[i] < arr2[j]) {
+            res.push(arr1[i])
+            i++
+        } else {
+            res.push(arr2[j])
+            j++ 
+        }
+    }
+    // 若其中一个子数组首先被合并完全，则直接拼接另一个子数组的剩余部分
+    if (i < len1) {
+        return res.concat(arr1.slice(i))
+    } else {
+        return res.concat(arr2.slice(j))
+    }
+}
+```
 
 
 
