docs； vue2 基本使用

--- a/前端面试题/Vue、React、Webpack/02.Vue 使用.md
+++ b/前端面试题/Vue、React、Webpack/02.Vue 使用.md
@@ -136,5 +136,602 @@
 
 ## 03. 如何用自定义事件进行 vue 组件通讯
 
-​	
+​	Vue 的实例本身具备有自定义事件的能力
+
+```js
+// utils/event.js
+import Vue from 'vue'
+
+export default new Vue()
+
+// a.vue
+import event from '@/utils/event'
+
+// 去调用自定义事件
+event.$emit('onAddTitle', this.title)
+
+
+// b.vue
+import event from '@/utils/event'
+
+// 绑定自定义事件
+mounted() {
+	event.$on('onAddTitle', this.addTitleHandler)	  
+}
+
+// 记得要解绑自定义事件，及时销毁，否则可能造成内存泄漏
+beforeDestory() {
+  event.$off('onAddTitle', this.addTitleHandler)
+}
+```
+
+
+
+## 04. Vue 父子组件生命周期调用顺序
+
+### 生命周期（单个组件）
+
++ 挂载阶段
++ 更新阶段
++ 销毁阶段
+
+
+
+#### created 和 mounted 有什么区别？
+
+created dom 还没挂载完毕，创建初始化阶段
+
+mounted dom 已经挂载完毕，可以进行 ajax 请求数据
+
+
+
+#### beforeDestory 
+
++ 解除绑定
++ 销毁子组件以及事件监听器
+
+
+
+
+
+### 生命周期（父子组件）
+
+父组件 created
+
+子组件 created
+
+子组件 mounted
+
+父组件 mounted
+
+
+
+父组件 before update
+
+子组件 before update
+
+子组件 updated
+
+父组件 updated
+
+
+
+父组件 before destroy
+
+子组件 before destory
+
+子组件 destoryed
+
+父组件 destoryed
+
+
+
+
+
+## 05. Vue 高级特性
+
++ 不是每个都很常用，但用到的时候必须要知道
++ 考察候选人对Vue 的掌握是否全面，且有深度
++ 考察做过的项目是否有深度和复杂度（至少能用到高级特性）
+
+
+
+### Vue 高级特性
+
++ 自定义 v-model
++ $nextTick 、 refs
++ slot
++ 动态、异步组件
++ keep-alive
++ mixin
+
+
+
+### Vue如何实现自定义 v-model
+
+```vue
+<template>
+    <!-- 例如： vue 颜色选择  -->
+    <input type="text" 
+        :value="text1"
+        @input="$emit('change', $event.target.value)"
+    >
+    <!-- 
+        1. 上面的 input 使用了 :value 而不是 v-model
+        2. 上面的change 和 model.event 要对应起来
+        3. text1 属性要对应气力啊
+     -->
+</template>
+
+<script>
+export default {
+    model: {
+        prop: 'text1',  // 对应props text
+        event: 'change'
+    },
+    props: {
+        text1: {
+            type: String,
+            default: () => {
+                return ''
+            }
+        }
+    }
+}
+</script>
+```
+
+
+
+### Vue 组件更新只会如何获取最新DOM - $nextTick
+
++ Vue 是异步渲染（后面会讲原理）
++ data 改变之后，DOM 不会 立刻渲染
++ $nextTick 会在 DOM渲染之后被触发，以获取最新DOM节点
+
+  
+
+```vue
+<template>
+  <div>
+    <ul ref="ul1">
+      <li v-for="item in list" :key="item">
+        {{ item }}
+      </li>
+    </ul>
+    <button @click="additem">添加</button>
+    <button @click="additemAsync">Async添加</button>
+  </div>
+</template>
+
+<script>
+export default {
+    data() {
+        return {
+            list: [
+                'a', 'b', 'c'
+            ]
+        }
+    },
+    methods: {
+        additem() {
+            this.list.push(`${Date.now()}`)
+            this.list.push(`${Date.now()}`)
+            this.list.push(`${Date.now()}`)
+            const ulElem = this.$refs.ul1
+
+            console.log(ulElem.childNodes.length)
+        },
+        additemAsync() {
+            this.list.push(`${Date.now()}`)
+            this.list.push(`${Date.now()}`)
+            this.list.push(`${Date.now()}`)
+            // 1. Vue 异步渲染
+            // 2. $nextTick 待 DOM 渲染完再回调
+            // 3. 页面渲染时会将 data 的修改做整合，多次 data 修改只会渲染一次
+            this.$nextTick(() => {
+                const ulElem = this.$refs.ul1
+                console.log(ulElem.childNodes.length)
+            })
+        }
+    }
+}
+</script>
+```
+
+
+
+### slot
+
++ 基本使用
++ 作用域插槽
++ 具名插槽
+
+
+
+##### 作用域插槽
+
++ 在子组件定义一个要给父组件传出去的类似 prop 的数据 `:slotData="website"`
++ 然后再父组件中定义一个 template 上面挂载 `v-slot="slotProps"`
++ 最后取子组件的值 `{{slotProps.slotData.title}}`
+
+`ScopedSlotDemo.vue`
+
+```vue
+<template>
+    <a href="url">
+        <slot :slotData="website">
+            {{website.subTitle}}
+        </slot>
+    </a>
+</template>
+  
+<script>
+export default {
+    props: ['url'],
+    data() {
+        return {
+            website: {
+                url: 'https://tiantingrui.com',
+                title: 'terry',
+                subTitle: 'ice_sweet'
+            }
+        }
+    }
+}
+</script>
+```
+
+`App.vue`
+
+```vue
+<template>
+    <div>
+        <scoped-slot-demo :url="website.url">
+            <template v-slot="slotProps">
+                {{slotProps.slotData.title}}
+            </template>
+        </scoped-slot-demo>
+    </div>
+</template>
+
+<script>
+import ScopedSlotDemo from 'ScopedSlotDemo.vue'
+
+export default {
+    components: {
+        ScopedSlotDemo
+    },
+    data() {
+        return {
+            website: {
+                url: 'https://baidu.com',
+                title: '百度',
+                subTitle: '百度一下，你就知道'
+            }
+        }
+    }    
+}
+</script>
+```
+
+
+
+##### 具名插槽
+
+`NamedSlot.vue`
+
+```vue
+<template>
+    <div>
+        <header>
+            <slot name="header"></slot>
+        </header>
+        <main>
+            <slot></slot>
+        </main>
+        <footer>
+            <slot name="footer"></slot>
+        </footer>
+    </div>
+</template>
+```
+
+`App.vue`
+
+```vue
+<named-slot>
+  <!-- 缩写  <template #header> -->
+  <template v-slot:header>
+		<h1>将插入 header slot 中</h1>
+  </template>
+  	<p> 将插入到 main slot 中， 即未命名的 slot </p>
+  <template>
+		<p>将插入到 footer slot 中</p>
+  </template>
+</named-slot>
+```
+
+
+
+### 动态组件
+
++ `:is="component-name"` 用法
++ 需要根据数据，动态渲染的场景，即组件类型不确定。
+
+
+
+```vue
+<template>
+    <div v-for="(item) in componentList" :key="item.key">
+        <component :is="item.type" />
+    </div>
+</template>
+
+<script>
+import A from './A'
+import B from './B'
+import C from './C'
+export default {
+    component: {
+        A, B, C
+    },
+    data() {
+        return {
+            componentList: [
+                {
+                    type: 'A',
+                    key: 1
+                },
+                {
+                    type: 'B',
+                    key: 2
+                },
+                {
+                    type: 'C',
+                    key: 3
+                }
+
+            ]
+        }
+    }
+}
+</script>
+```
+
+
+
+### 异步组件
+
++ import 函数
++ 按需加载，异步加载大组件
+
+
+
+```vue
+components: {
+        ScopedSlotDemo,
+        NamedSlot,
+        DynamicComponent: () => import('./DynamicComponent.vue') // 异步组件
+    },
+```
+
+
+
+### Vue 如何缓存组件 - keep-alive
+
++ 缓存组件
++ 频繁切换，不需要重复渲染
++ 是Vue 常见性能优化的一个考点
+
+```vue
+<template>
+    <div>
+        <button @click="changeState('A')">
+            A
+        </button>
+        <button @click="changeState('B')">
+            B
+        </button>
+        <button @click="changeState('C')">
+            C
+        </button>
+      
+				<!-- tab 切换 -->
+        <keep-alive>
+            <keep-a v-if="state === 'A'"></keep-a>
+            <keep-b v-if="state === 'B'"></keep-b>
+            <keep-c v-if="state === 'C'"></keep-c>
+        </keep-alive>
+    </div>
+</template>
+
+<script>
+import KeepA from './KeepA.vue'
+import KeepB from './KeepB.vue'
+import KeepC from './KeepC.vue'
+
+export default {
+    components: {
+        KeepA,
+        KeepB,
+        KeepC
+    },
+    data() {
+        return {
+            state: 'A'
+        }
+    },
+    methods: {
+        changeState(state) {
+            this.state = state
+        }
+    }
+}
+</script>
+```
+
+
+
+
+
+### mixin
+
++ 多个组件有相同的逻辑，抽离出来
++ Mixin 并不是完美的解决方案，会有一些问题
+  + 变量来源不明确，不利于阅读
+  + 多mixin 可能会造成命名冲突，覆盖
+  + mixin 和组件可能出现多对多的关系，复杂度较高
++ Vue3 提出的Composition API 旨在解决这些问题
+
+
+
+##### 生命周期执行顺序
+
+先执行 mixin 的生命周期钩子，在执行组件内的生命周期钩子
+
+方法会覆盖
+
+
+
+### Vue高级特性知识小结
+
++ 自定义 v-model
++ $nextTick & ref
++ slot
+  + 基本使用
+  + 作用域插槽
+  + 具名插槽
++ 动态组件
+  + `<component :is="component-name"/>`
++ 异步组件
+  + 动态import
++ keep-alive - 缓存组件
++ mixin
+
+
+
+#### 相关的面试技巧
+
++ 可以不太深入，但必须知道
++ 熟悉基本用法，了解使用场景
++ **最好能和自己的项目经验结合起来**
+
+
+
+
+
+## 06. Vuex 使用
+
++ 面试考点并不多（因为熟悉Vue之后，vuex 没有难度）
++ 但基本概念、基本使用和API必须要掌握
++ 可能会考察 state 的 数据结构设计（后面更深入的去分享）
+  + 比如：设计一个购物车
+
+
+
+### Vuex 基本概念
+
++ state
++ getters
++ action
++ mutation
+
+
+
+#### 用于 Vue 组件
+
++ dispatch
++ commit
++ mapState
++ mapGetters
++ mapActions
++ mapMutations
+
+
+
+## 07. Vue-router 使用
+
++ 面试考点并不多（前提是熟悉Vue）
++ 路由模式（hash、H5 history）
++ 路由配合（动态路由、懒加载）
+
+
+
+
+
+### Vue-router 路由模式
+
++ hash 模式， `#`
++ H5 history 模式 `/`
++ 后者需要server 端支持，因此无特殊需求可选择前者
+
+
+
+### Vue-router 路由配置 动态路由
+
+```js
+const User = {
+  // 获取参数如 10 20
+  template: '<div> {{$route.params.id}} </div>'
+}
+
+const router = new VueRouter({
+  routes: [
+    // 动态参数以冒号开头， `/user/10` `/user/20` 等格式的路由
+    {
+      path: '/user/:id',
+      component: User
+    }
+  ]
+})
+```
+
+
+
+### Vue-router 路由配置 懒加载
+
+```js
+export default new VueRouter({
+  routes: [
+    {
+      path: '/',
+      component: () => {
+        /* webpackChunkName: "navigator" */
+        './../components/Navigator'
+      }
+    },
+    {
+      path: '/foo',
+      component: () => {
+        /* webpackChunkName: 'foo' */
+        './../components/Foo'
+      }
+    }
+  ]
+})
+```
+
+
+
+### Vuex Vue-router 总结
+
++ 面试考点并不多（前提是熟悉Vue)
++ 掌握基本概念，基本使用
++ 面试官时间有限，序考察最核心、最常用的问题，而非边角问题
+
+
+
+## Vue使用 - 总结
+
++ Vue的基本使用
++ Vue组件使用
++ Vue高级特性
++ Vue 生态
+  + Vuex
+  + Vue-router
+
+
+
+
 
