--- a/前端面试题/Vue、React、Webpack/01. Vue 、React、Webpack 相关面试题总结.md
+++ b/前端面试题/Vue、React、Webpack/01. Vue 、React、Webpack 相关面试题总结.md
@@ -7,11 +7,51 @@
 ## Vue
 
 + v-show 和 v-if 的区别
+
+```
+v-show : 通过css 的display 来控制
+v-if: 通过Vue 本身的机制来控制，是惰性的
+使用场景：
+当组件频繁切换的时候用 v-show，这里可以和缓存组件 keep-alive 做下对比
+```
+
 + 为何 v-for 中要用 key
+
+```
+
+```
+
 + 描述Vue组件生命周期（有父子组件情况）
+
+```
+创建阶段：
+更新阶段：
+销毁阶段：
+```
+
 + Vue组件如何通讯
+
+```
+父子组件： props $emit
+兄弟组件，不同层级组件：自定义事件，类似eventBus
+Vuex
+```
+
+
+
 + 描述组件渲染和更新的过程
+
+```
+
+```
+
+
+
 + 双向数据绑定 v-model 的实现原理
+
+```
+
+```
 
 
 
