--- a/前端面试题/Vue、React、Webpack/Vue原理/05.模板编译.md
+++ b/前端面试题/Vue、React、Webpack/Vue原理/05.模板编译.md
@@ -147,3 +147,50 @@ Vue.component('heading', {
 + 初次渲染过程
 + 更新过程
 + 异步渲染
+
+
+
+## vue 组件是如何渲染和更新的
+
+### 初次渲染过程
+
++ 解析模板为 render 函数（或在开发环境已完成，vue-loader）
++  触发响应式，监听data属性 getter setter (执行render 函数会触发 getter)
++ 执行 render 函数，生成 vnode ，patch(elem，vnode)
+
+
+
+### 更新过程
+
++ 修改data，触发 setter （此前在 getter 中已被监听）
++ 重新执行render 函数，生成 newVnode
++ patch(vnode， newVnode)
+
+
+
+### 异步渲染
+
++ 回顾 nextTick()
++ 汇总data的修改，一次性更新视图
++ 减少DOM操作次数，提高性能
+
+
+
+
+
+## 总结1 - Vue原理的三大部分
+
++ 渲染和响应式的关系
++ 渲染和模板编译的关系
++ 渲染和vdom的关系
+
+
+
+## 总结2 - vue 组件是如何渲染和更新的
+
++ 初次渲染过程
++ 更新过程
++ 异步渲染
+
+
+
