--- a/前端面试题/Vue、React、Webpack/03.Vue 真题.md
+++ b/前端面试题/Vue、React、Webpack/03.Vue 真题.md
@@ -35,7 +35,7 @@
 
 #### 5. 描述组件渲染和更新的过程
 
-![image-20210118121731979](/Users/terry/typero-image/image-20210118121731979.png)
+![data](https://cn.vuejs.org/images/data.png)
 
 
 
@@ -124,4 +124,49 @@
 + 解绑自定义事件 event.$off（可能在当前页面中使用了$on 方法，那需要在组件销毁前解绑）
 + 清除自己定义的定时器
 + 解除事件绑定：scroll、mousemove
+
+
+
+#### 17. 为什么Vue3.0要重写响应式系统
+
++ Vue 响应式原理
++ 响应式源码解读
+  + object.defineProperty 缺陷
+    + 深度监听，一次递归，计算量大，容易出现等待，性能不好
+    + 不能增加、删除属性
+    + 不能监听数组
+  + Proxy
++ Vue3 Composition API
+
+
+
+> 深入响应式原理：https://cn.vuejs.org/v2/guide/reactivity.html
+
+![data](https://cn.vuejs.org/images/data.png)
+
+##### Vue响应式数据的实现原理
+
++ 开发者通过Vue实例的data选项定义普通的 javaScript对象
+
++ Vue遍历此对象的所有的 property，并使用Object.defineProperty把这些 property 全部转化为 getter/setter（这些 getter/setter 对用户来说是不可见的，但是在内部它们让 Vue 能够追踪依赖，在 property 被访问和修改时通知变更。）
+
++ 模板最终被编译为一个 render 函数
+
+  ```js
+  function render() {
+    with(this) {
+      return _c('div', {
+        attrs: {
+          "id": 'app'
+        }
+      }, [_c('h1', [_v(_s(message))]), _c('button', {
+        on: {
+          "click": handleClick
+        }
+      }, [_v('Click')])])
+    }
+  }
+  ```
+
++ 每个组件实例都对应一个 **watcher** 实例，它会在组件渲染的过程中把“接触”过的数据 property 记录为依赖。之后当依赖项的 setter 触发时，会通知 watcher，从而使它关联的组件重新渲染。
 
