docs: 补充常见面试题内容

--- a/前端面试题/javascript/面试题汇总.md
+++ b/前端面试题/javascript/面试题汇总.md
@@ -175,3 +175,225 @@
     +  === 严格相等
     + 哪些场景才用 == ？
       + == null
+
+
+
+
+
++ 函数声明和函数表达式的区别
+
+  + 函数声明 function fn() {}
+  + 函数表达式 const fn = function() {}
+  + 函数声明会在代码执行前预加载，而函数表达式不会
+
+  
+
++ new Object() 和 Object.create() 的区别
+
+  + {} 等同于 new Object()，原型Object.prototype
+  + Object.create(null) 没有原型
+  + Object.create({}) 会指定原型
+
+
+
+
+
++ 关于this 的场景题
+
+  this的值取决于执行的时候，而不是定义的时候
+
+```js
+const User = {
+    count: 1,
+    getCount: function() {
+        return this.count
+    }
+}
+console.log(User.getCount) // 1
+const func = User.getCount
+console.log(func()) // undefined
+```
+
+
+
++ 关于作用域和自由变量的场景题 - 1
+
+```JS
+let i
+for (i = 1; i <=3; i++) {
+    setTimeout(function(){
+        console.log(i)
+    }, 0)
+}
+// 4, 4, 4,
+```
+
+
+
++ 关于作用域和自由变量的场景题 - 2
+
+```js
+let a = 100
+function test() {
+    alert(a)
+    a = 10
+    alert(a)
+}
+test()
+alert(a)
+// 100 10 10
+```
+
+
+
++ 如何获取多个数字中的最大值
+
+```js
+function max() {
+    const nums = Array.prototype.slice.call(arguments) // 变为数组
+    let max = 0
+    nums.forEach(n => {
+        if (n > max) {
+            max = n
+        }
+    })
+    return max 
+}
+```
+
+​    Math.max(10, 20, 30)
+
+   Math.min(10, 20, 30)
+
++ 如何用js实现继承?
+  + class 继承
+  + prototype 继承
+
+
+
++ 如何捕获JS 程序中的异常？
+
+  + try catch(手动捕获)
+  + 自动捕获
+
+  ```js
+  window.onerror = function(message, source, lineNum, colNum, error) {}
+  ```
+
+  
+
++ 什么是JSON?
+
+  + json 是一种数据格式，本质是一段字符串
+  + json 格式和JS对象结构一致，对JS 语言更友好
+  + window.JSON 是一个全局对象：JSON.stringify JSON.parse
+
++ 获取当前页面URL 参数
+
+  + 传统方式，查找 location.search
+  + 新API, URLSearchParams
+
+  
+
+  
+
+  
+
++ 将url 参数解析为JS对象
+
+```js
+function queryToObj() {
+    const res = {}
+    const search = location.search.substr(1) // 去掉前面的 `?`
+    search.split('&'),forEach(item => {
+        const arr = item.split('=')
+        const key = arr[0]
+        const val = arr[1]
+        res[key] = val
+    })
+    return res
+}
+```
+
++ 手写 flatern 考虑多层级
+
+```js
+function flat(arr) {
+    // 查看数组种是否含有数组
+    const isDeep = arr.some(item => item instanceof Array)
+    if（!isDeep） {
+        return arr
+    }
+    const res = Array.prototype.concat.apply([], arr)
+    return flat(res)
+} 
+```
+
++ 数组去重
+
+  + 传统方式，遍历元素挨个比较、去重
+  + 使用Set - (无序，不能重复)
+
+  ```js
+  [...new Set(arr)]
+  ```
+
+  
+
+  + 考虑计算效率
+
+  ```js
+  function unipue(arr) {
+      const res = []
+      arr.forEach(item => {
+          if (res.indexOf(item) < 0) {
+              res.push(item)
+          }
+      })
+      return res
+  }
+  
+  
+  ```
+
+  
+
++ 手写深拷贝
+
+```js
+function deepClone(obj = {}) {
+    if (typeof obj !== 'object' || obj == null) {
+        return obj
+    }
+    let result
+    if (obj instanceof Array) {
+        result = []
+    } else {
+        result = {}
+    }
+    for (let key in obj) {
+        if (obj.hasOwnProperty(key)) {
+            result[key] = deepClone(obj[key])
+        }
+    }
+    return result
+}
+```
+
+**注意：Object.assign() 不是深拷贝**
+
+
+
++ 介绍以下RAF requestAnimateFrame
+
+
+
+
+
+
+
+
+
++ 前端性能如何优化？一般从哪几个方面考虑
+  + 原则：多使用内存、缓存，减少计算，减少网络请求
+  + 方向：加载页面，页面渲染，页面操作流畅度
