feat: promise.all 实现

--- a/前端面试题/前端面试题汇总整理.md
+++ b/前端面试题/前端面试题汇总整理.md
@@ -136,6 +136,29 @@ Function.prototype.myBind = function(context) {
 }
 ```
 
+7. promise.all 实现
+
+```js
+Promise.prototype.myAll = function(arr) {
+  let rst = []
+  let promiseCount = 0
+  let len = arr.length
+  return new Promise(function(resolve, reject) {
+    for (let val of arr) {
+      Promise.resolve(val).then(function(res) {
+        promiseCount++
+        rst.push(res)
+        if (promiseCount === len) {
+          return resolve(rst)
+        }
+      }, function(err) {
+        return reject(err)
+      })
+    }
+  })
+}
+```
+
 
 
 
