--- a/前端面试题/前端面试题汇总整理.md
+++ b/前端面试题/前端面试题汇总整理.md
@@ -201,6 +201,116 @@ const arr = [1, 2, 3, 3, 2, 4, 5,1]
 ```
 
 10. 请写出至少三种减少页面加载时间的方法
+11. (阿里)下面代码会打印出什么
+
+```js
+function Foo() {
+  // 重写了 window.getName 函数 返回 window
+  getName = function() {
+    console.log(1)
+  }
+  return this
+}
+Foo.getName = function() {
+  console.log(2)
+}
+Foo.prototype.getName = function() {
+  console.log(3)
+}
+var getName = function() {
+  console.log(4)
+}
+function getName() { // 函数声明变量会提升，会被上面的函数表达式给覆盖掉
+  console.log(5)
+}
+
+Foo.getName() // 2
+getName() // 4
+Foo().getName() // 1 
+getName() // 1 
+new Foo.getName() // 2 
+new Foo().getName() // 3
+// foo = new Foo()
+// foo.getName()
+new new Foo().getName() // 3
+// new(new Foo()).getName()
+
+console.log(typeof typeof typeof 1)
+```
+
+函数声明 function  会变量提升
+
+函数表达式 var a = function() {}
+
+
+
+12. 下面代码会打印出什么
+
+```js
+var i = 12
+var sum = i++ + ++i + ++i * 2 + i -- + i --
+console.log(sum) // 85
+console.log(i) // 13
+
+function Foo() {
+  var i = 0
+  return function() {
+    console.log(i++)
+  }
+}
+var f1 = Foo(), f2 = Foo()
+f1() // 0
+f1() // 1
+f2() // 0
+
+var bb = 1
+function aa(bb) {
+  bb = 2
+  console.log(bb)
+}
+aa(bb) // 2
+console.log(bb) // 1
+```
+
+
+
+13. (字节)请输出下面的代码
+
+```js
+async function async1() {
+	console.log('async start')
+	await async2()
+  console.log('async end')
+}
+async function async2() {
+  console.log('async2')
+}
+console.log('script start')
+
+setTimeout(function () {
+  console.log('setTimeout')
+}, 0)
+
+async1()
+
+new Promise(function(resolve) {
+  console.log('promise start')
+  resolve()
+}).then(function () {
+  console.log('promise then')
+})
+console.log('script end')
+
+// script start
+// async start
+// async2
+// promise start
+// script end
+// async end
+// promise then
+// setTimeout
+
+```
 
 
 
