--- a/前端面试题/前端面试题汇总整理.md
+++ b/前端面试题/前端面试题汇总整理.md
@@ -339,6 +339,16 @@ plugin：plugin 是一个扩展器，它丰富了 webpack 本身，针对是 loa
 
 
 
+2. (微医)webpack 热更新原理，是如何做到在不刷新浏览器的前提下更新页面的
+
+```
+1. 当修改了一个或多个文件
+2. 文件系统接收更改并通知webpack
+3. webpack 重新编译构建一个或多个模块，并通知 HMR(Hot Module Replacement) 服务器进行更新
+4. HMR Server 使用 Websocket 通知 HMR runtime 需要更新，HMR runtime 通过 http 请求更新 jsonp
+5. HMR runtime 替换更新中的模块，如果确定这些模块无法更新，则触发整个页面刷新
+```
+
 
 
 
@@ -348,3 +358,25 @@ plugin：plugin 是一个扩展器，它丰富了 webpack 本身，针对是 loa
 1. http 和 https 有什么区别
 2. http 报文有哪些
 3. 
+
+
+
+
+
+
+
+## 其他
+
+1. axios 如何取消发送请求
+2. Amd cmd Commonjs Es6 Module 区别
+
+
+
+
+
+## 数据结构与算法
+
+#### 排序
+
++ 冒泡排序
++ 快速排序
