--- a/前端面试题/前端面试题汇总整理.md
+++ b/前端面试题/前端面试题汇总整理.md
@@ -382,3 +382,19 @@ plugin：plugin 是一个扩展器，它丰富了 webpack 本身，针对是 loa
 
 + 冒泡排序
 + 快速排序
+
+
+
+
+
+
+
+## 设计模式
+
++ 介绍下观察者模式和订阅-发布模式的区别，各自适用于什么场景
+
+```
+观察者模式中主体和观察者是互相感知的，发布-订阅模式时借助第三方来实现调度的，发布者和订阅者之间互不感知。
+一对多时使用观察者模式，多对多时使用订阅-发布模式。
+```
+
