--- a/前端面试题/前端面试题汇总整理.md
+++ b/前端面试题/前端面试题汇总整理.md
@@ -398,3 +398,112 @@ plugin：plugin 是一个扩展器，它丰富了 webpack 本身，针对是 loa
 一对多时使用观察者模式，多对多时使用订阅-发布模式。
 ```
 
+
+
+
+
+## 性能优化
+
+#### 性能分析
+
++ 页面加载性能（加载时间） **重点**
++ 动画与操作性能（是否卡顿）
++ 内存、电量消耗（内存占用）
+
+
+
+1. 在浏览器中输入URL并回车后都发生了什么？
+
+```
+a. 解析url，去域名系统里匹配 IP
+	 https://www.baidu.com
+	 www: 服务器
+	 https: 传输协议（http, TSP协议）TSL, SSL
+	 baidu.com: 域名
+	 
+	 第二次：缓存里找是否有这个 url、ip
+	 
+b. 浏览器与网站建立连接（TCP三次握手，不携带任何数据）
+
+c. 请求数据
+
+d. 渲染页面（过程）
+
+e. TCP 断开连接（四次挥手）
+```
+
+2. css加载会造成阻塞吗？
+
+```
+a. CSS加载不会阻塞DOM解析
+b. CSS加载会阻塞DOM渲染（如果是和 DOM tree 非并行情况加载）
+c. CSS加载会阻塞JS执行
+```
+
+3. 前端从哪些方面做性能优化？(加载层面)
+
+```
+a. 减少http请求（精灵图，雪碧图，css,js 文件的合并，用css代替图片）
+b. 缩减文件大小（资源压缩，webpack,GZip 压缩，图片压缩）
+c. CDN（大图加载，大文件，类库）
+d. http2
+e. SSR服务端渲染（vue）, 预加载
+f. 懒加载，减少首屏加载量
+g. 减少回流，使用定位等，对于操作量比较大的dom，用文档碎片去做（虚拟dom原理）
+h. 缓存（cache）
+```
+
+4. 预加载（代理模式）实现
+
+```js
+const btn1 = document.querySelector('.btn1')
+btn1.onclick = function() {
+  let myImage = (function() {
+    let imgNode = document.querySelector('.img2')
+    return {
+      setSrc: function(src) {
+        imgNode.src = src
+      }
+    }
+  })()
+  
+  let proxyImage = (function() {
+    let img = new Image
+    img.onload = function() {
+      myImage.setSrc = src
+    }
+    return {
+      setSrc: function(src) {
+        myImage.setSrc('./img/timg.gif')
+        img.src = src
+      }
+    }
+  })()
+  
+  proxyImage.setSrc('./img/0001.jpg')
+}
+```
+
+5. 懒加载实现
+
+```js
+let num = document.querySelector('.img').length
+let n = 0 
+function lazyLoad() {
+  // 可见区域高度
+  let seeHeight = document.documentElement.clientHeight
+  // 滚动条距离顶部的高度
+  let scrollTop = document.documentElement.scrollTop || document.body.scrollTop
+  for(let i = n; i < num; i ++) {
+    // 是否在当前饰扣之内
+    if (img[i].offset < seeHeight + scrollTop) {
+      // 替换
+      if (img[i].getAttribute('src') == './img2/timg.gif') {
+        img[i].src = img[i].getAttribute('data-src')
+      }
+      n = i + 1
+    }
+  }
+}
+```
+
