feat: 微医二面面试题

--- a/前端面试题/前端面试题汇总整理.md
+++ b/前端面试题/前端面试题汇总整理.md
@@ -514,3 +514,52 @@ function lazyLoad() {
 + docker
 + k8s
 
+
+
+## 微医二面
+
+beforeRouteUpdate 适用于动态组件
+
+actived
+
+beforeRouteEnter
+
+
+
+Keep-alive 优缺点
+
+beforeRouterEnter 之后的生命周期钩子顺序
+
+
+
+微前端 （乾坤）
+
+
+
+options 预检请求
+
+
+
+各个浏览器内核
+
+
+
+promise 静态方法
+
+
+
+ts
+
++ 接口和type的区别
++ 泛型的使用场景
+
+
+
+
+
+反转链表
+
+深拷贝（考虑函数）
+
+截取 url 
+
